Change example to use separate training and test data

--- a/examples/mixed_logit_predict_example_clean.ipynb
+++ b/examples/mixed_logit_predict_example_clean.ipynb
@@ -38,6 +38,7 @@
     "import sklearn\n",
     "\n",
     "from jaxlogit.mixed_logit import MixedLogit, ConfigData\n",
+    "from jaxlogit.utils import wide_to_long\n",
     "\n",
     "#  64bit precision\n",
     "jax.config.update(\"jax_enable_x64\", True)"
@@ -68,23 +69,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f6b4f249",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
+    "df_long = pd.read_csv(pathlib.Path.cwd() / \"electricity_long.csv\")\n",
+    "choice_df = df_long.loc[df_long['choice'] == 1, ['id', 'chid', 'alt']]\n",
+    "choice_df = choice_df.rename(columns={'alt': 'choice'})\n",
+    "df_wide = df_long.pivot(index=['id', 'chid'], columns='alt', values=varnames)\n",
+    "df_wide.columns = [f'{var}_{alt}' for var, alt in df_wide.columns]\n",
+    "df_wide = df_wide.reset_index()\n",
+    "df = df_wide.merge(\n",
+    "    choice_df,\n",
+    "    on=['id', 'chid'],\n",
+    "    how='inner',\n",
+    "    validate='one_to_one'\n",
+    ")\n",
+    "\n",
+    "df_wide_train, df_wide_test = sklearn.model_selection.train_test_split(df, train_size=0.8)\n",
+    "df_train = wide_to_long(df_wide_train, \"chid\", [1,2,3,4], \"alt\", varying=varnames)\n",
+    "df_train = df_train.sort_values(['chid', 'alt'])\n",
+    "df_test = wide_to_long(df_wide_test, \"chid\", [1,2,3,4], \"alt\", varying=varnames)\n",
+    "df_test = df_test.sort_values(['chid', 'alt'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46257705",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = df_train[varnames]\n",
+    "y_train = df_train['choice']\n",
+    "\n",
+    "ids_train = df_train['chid']\n",
+    "alts_train = df_train['alt']\n",
+    "panels_train = df_train['id']\n",
+    "\n",
+    "X_test = df_test[varnames]\n",
+    "y_test = df_test['choice']\n",
+    "\n",
+    "ids_test = df_test['chid']\n",
+    "alts_test = df_test['alt']\n",
+    "panels_test = df_test['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "535c39c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df[varnames]\n",
-    "y = df['choice']\n",
-    "\n",
-    "ids = df['chid']\n",
-    "alts = df['alt']\n",
-    "panels = df['id']\n",
     "randvars = {'pf': 'n', 'cl': 'n', 'loc': 'n', 'wk': 'n', 'tod': 'n', 'seas': 'n'}\n",
     "\n",
     "model_jax = MixedLogit()\n",
     "model_x = xlogit.MixedLogit()\n",
     "\n",
     "config = ConfigData(\n",
-    "    panels=panels,\n",
+    "    panels=panels_train,\n",
     "    n_draws=n_draws,\n",
     "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
     "    batch_size=None,\n",
@@ -109,11 +154,11 @@
    "outputs": [],
    "source": [
     "model_jax.fit(\n",
-    "    X=X,\n",
-    "    y=y,\n",
+    "    X=X_train,\n",
+    "    y=y_train,\n",
     "    varnames=varnames,\n",
-    "    ids=ids,\n",
-    "    alts=alts,\n",
+    "    ids=ids_train,\n",
+    "    alts=alts_train,\n",
     "    randvars=randvars,\n",
     "    config=config\n",
     ")\n",
@@ -137,13 +182,13 @@
    "outputs": [],
    "source": [
     "model_x.fit(\n",
-    "    X=X,\n",
-    "    y=y,\n",
+    "    X=X_train,\n",
+    "    y=y_train,\n",
     "    varnames=varnames,\n",
-    "    ids=ids,\n",
-    "    alts=alts,\n",
+    "    ids=ids_train,\n",
+    "    alts=alts_train,\n",
     "    randvars=randvars,\n",
-    "    panels=panels,\n",
+    "    panels=panels_train,\n",
     "    n_draws=n_draws,\n",
     "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
     "    batch_size=None,\n",
@@ -170,7 +215,7 @@
    "source": [
     "model = model_jax \n",
     "config = ConfigData(\n",
-    "    panels=panels,\n",
+    "    panels=panels_test,\n",
     "    n_draws=n_draws,\n",
     "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
     "    batch_size=None,\n",
@@ -186,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prob_jj = model.predict(X, varnames, alts, ids, randvars, config)"
+    "prob_jj = model.predict(X_test, varnames, alts_test, ids_test, randvars, config)"
    ]
   },
   {
@@ -205,7 +250,7 @@
    "outputs": [],
    "source": [
     "model = model_x\n",
-    "_, prob_xx = model.predict(X, varnames, alts, ids, isvars=None, panels=panels, n_draws=n_draws, return_proba=True)"
+    "_, prob_xx = model.predict(X_test, varnames, alts_test, ids_test, isvars=None, panels=panels_test, n_draws=n_draws, return_proba=True)"
    ]
   },
   {
@@ -218,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "13b94508",
    "metadata": {},
    "outputs": [],
@@ -240,32 +285,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c56cca0f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
-    "df_long = pd.read_csv(pathlib.Path.cwd() / \"electricity_long.csv\")\n",
-    "choice_df = df_long.loc[df_long['choice'] == 1, ['id', 'chid', 'alt']]\n",
-    "choice_df = choice_df.rename(columns={'alt': 'choice'})\n",
-    "df_wide = df_long.pivot(index=['id', 'chid'], columns='alt', values=varnames)\n",
-    "df_wide.columns = [f'{var}_{alt}' for var, alt in df_wide.columns]\n",
-    "df_wide = df_wide.reset_index()\n",
-    "df = df_wide.merge(\n",
-    "    choice_df,\n",
-    "    on=['id', 'chid'],\n",
-    "    how='inner',\n",
-    "    validate='one_to_one'\n",
-    ")\n",
+    "# varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
+    "# df_long = pd.read_csv(pathlib.Path.cwd() / \"electricity_long.csv\")\n",
+    "# choice_df = df_long.loc[df_long['choice'] == 1, ['id', 'chid', 'alt']]\n",
+    "# choice_df = choice_df.rename(columns={'alt': 'choice'})\n",
+    "# df_wide = df_long.pivot(index=['id', 'chid'], columns='alt', values=varnames)\n",
+    "# df_wide.columns = [f'{var}_{alt}' for var, alt in df_wide.columns]\n",
+    "# df_wide = df_wide.reset_index()\n",
+    "# df = df_wide.merge(\n",
+    "#     choice_df,\n",
+    "#     on=['id', 'chid'],\n",
+    "#     how='inner',\n",
+    "#     validate='one_to_one'\n",
+    "# )\n",
     "\n",
-    "database = db.Database('electricity', df)\n",
-    "database.panel('id')"
+    "database_train = db.Database('electricity', df_wide_train)\n",
+    "database_train.panel('id')\n",
+    "database_test = db.Database('electricity', df_wide_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e6d45e23",
    "metadata": {},
    "outputs": [],
@@ -316,22 +362,13 @@
    "execution_count": null,
    "id": "5155f664",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The number of draws (700) is low. The results may not be meaningful. \n",
-      "The number of draws (700) is low. The results may not be meaningful. \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prob = models.logit(V, None, choice)\n",
     "logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
     "\n",
     "the_biogeme = bio.BIOGEME(\n",
-    "    database, logprob, number_of_draws=n_draws, seed=999, generate_yaml=False, generate_html=False\n",
+    "    database_train, logprob, number_of_draws=n_draws, seed=999, generate_yaml=False, generate_html=False\n",
     ")\n",
     "the_biogeme.model_name = 'model_b'\n",
     "results = the_biogeme.estimate()\n",
@@ -345,8 +382,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "database_sim = db.Database('electricity', df)\n",
-    "\n",
     "P = {\n",
     "    j: MonteCarlo(models.logit(V, None, j))\n",
     "    for j in [1, 2, 3, 4]\n",
@@ -357,7 +392,7 @@
     "    for j in [1, 2, 3, 4]\n",
     "}\n",
     "\n",
-    "biogeme_sim = bio.BIOGEME(database_sim, simulate)\n",
+    "biogeme_sim = bio.BIOGEME(database_test, simulate)\n",
     "biogeme_sim.model_name = 'per_choice_probs'\n",
     "\n",
     "probs = biogeme_sim.simulate(results.get_beta_values())"
@@ -410,7 +445,7 @@
    "outputs": [],
    "source": [
     "# Jaxlogit\n",
-    "y = np.reshape(y, (prob_jj.shape[0], -1))\n",
+    "y = np.reshape(y_test, (prob_jj.shape[0], -1))\n",
     "print(sklearn.metrics.brier_score_loss(y, prob_jj))"
    ]
   },
@@ -422,7 +457,7 @@
    "outputs": [],
    "source": [
     "# xlogit\n",
-    "y = np.reshape(y, (prob_xx.shape[0], -1))\n",
+    "y = np.reshape(y_test, (prob_xx.shape[0], -1))\n",
     "print(sklearn.metrics.brier_score_loss(y, prob_xx))"
    ]
   },
@@ -434,16 +469,8 @@
    "outputs": [],
    "source": [
     "# Biogeme\n",
-    "y = df['choice']\n",
+    "y = df_wide_test['choice']\n",
     "print(sklearn.metrics.brier_score_loss(y, probs))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "223a36f4",
-   "metadata": {},
-   "source": [
-    "# Test maximum number of draws for biogeme"
    ]
   }
  ],
