--- a/examples/mixed_logit_predict_example_clean.ipynb
+++ b/examples/mixed_logit_predict_example_clean.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "source": [
     "# Summary of time taken and brier scores for jaxlogit, xlogit, and biogeme\n",
-    "Where the estimation is taking place on the same data used to train\n",
+    "Where the estimation is using draws = 600 (suboptimal but highest without running out of memory in biogeme), and training and test data is separated.\n",
     "\n",
     "| | jaxlogit | xlogit | biogeme |\n",
     "|---|---|---|---|\n",
-    "|Making Model | 43.9s | 18.22s | 4:24 |\n",
-    "|Estimating | 1.4s | 0.2s | 1:07 |\n",
-    "|Brier Score | 0.6275 | 0.6275 | 0.62714 |"
+    "|Making Model | 41.7s | 17.6s | 4:15 |\n",
+    "|Estimating | 1.6s | 0.0s | 15.4s |\n",
+    "|Brier Score | 0.6345 | 0.6345 | 0.6345 |"
    ]
   },
   {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "39a05d62",
    "metadata": {},
    "outputs": [],
@@ -56,19 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "47fa6cc1",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(pathlib.Path.cwd() / \"electricity_long.csv\")\n",
     "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
-    "n_draws = 1000"
+    "n_draws = 600"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f6b4f249",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "46257705",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "535c39c8",
    "metadata": {},
    "outputs": [],
@@ -148,10 +148,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "52742f8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:2025-12-18 17:54:05,896:jax._src.xla_bridge:477: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda13.initialize()\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/evelyn/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/jax/_src/xla_bridge.py\", line 475, in discover_pjrt_plugins\n",
+      "    plugin_module.initialize()\n",
+      "  File \"/home/evelyn/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/jax_plugins/xla_cuda13/__init__.py\", line 328, in initialize\n",
+      "    _check_cuda_versions(raise_on_first_error=True)\n",
+      "  File \"/home/evelyn/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/jax_plugins/xla_cuda13/__init__.py\", line 285, in _check_cuda_versions\n",
+      "    local_device_count = cuda_versions.cuda_device_count()\n",
+      "                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.\n",
+      "WARNING:2025-12-18 17:54:05,907:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
+      "    Iterations: 95\n",
+      "    Function evaluations: 121\n",
+      "Estimation time= 41.7 seconds\n",
+      "---------------------------------------------------------------------------\n",
+      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
+      "---------------------------------------------------------------------------\n",
+      "pf                     -0.9775081     1.0000000    -0.9775081         0.328    \n",
+      "cl                     -0.2255002     1.0000000    -0.2255002         0.822    \n",
+      "loc                     2.2574238     1.0000000     2.2574238         0.024 *  \n",
+      "wk                      1.6596652     1.0000000     1.6596652        0.0971 .  \n",
+      "tod                    -9.4002812     1.0000000    -9.4002812      9.62e-21 ***\n",
+      "seas                   -9.5554154     1.0000000    -9.5554154      2.26e-21 ***\n",
+      "sd.pf                  -1.5334759     1.0000000    -1.5334759         0.125    \n",
+      "sd.cl                  -0.7273021     1.0000000    -0.7273021         0.467    \n",
+      "sd.loc                  1.5420804     1.0000000     1.5420804         0.123    \n",
+      "sd.wk                   0.6986658     1.0000000     0.6986658         0.485    \n",
+      "sd.tod                  2.1445312     1.0000000     2.1445312        0.0321 *  \n",
+      "sd.seas                 1.3206561     1.0000000     1.3206561         0.187    \n",
+      "---------------------------------------------------------------------------\n",
+      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "\n",
+      "Log-Likelihood= -3221.664\n",
+      "AIC= 6467.328\n",
+      "BIC= 6541.067\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_jax.fit(\n",
     "    X=X_train,\n",
@@ -176,10 +234,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e89a636c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
+      "    Iterations: 57\n",
+      "    Function evaluations: 65\n",
+      "Estimation time= 17.7 seconds\n",
+      "---------------------------------------------------------------------------\n",
+      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
+      "---------------------------------------------------------------------------\n",
+      "pf                     -0.9708111     1.0000000    -0.9708111         0.332    \n",
+      "cl                     -0.2121449     1.0000000    -0.2121449         0.832    \n",
+      "loc                     2.2137503     1.0000000     2.2137503        0.0269 *  \n",
+      "wk                      1.6392889     1.0000000     1.6392889         0.101    \n",
+      "tod                    -9.3057905     1.0000000    -9.3057905       2.3e-20 ***\n",
+      "seas                   -9.5665445     1.0000000    -9.5665445      2.03e-21 ***\n",
+      "sd.pf                  -0.2045959     1.0000000    -0.2045959         0.838    \n",
+      "sd.cl                   0.3794051     1.0000000     0.3794051         0.704    \n",
+      "sd.loc                  1.7149407     1.0000000     1.7149407        0.0864 .  \n",
+      "sd.wk                   1.1094828     1.0000000     1.1094828         0.267    \n",
+      "sd.tod                  2.3701470     1.0000000     2.3701470        0.0178 *  \n",
+      "sd.seas                 1.4960256     1.0000000     1.4960256         0.135    \n",
+      "---------------------------------------------------------------------------\n",
+      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "\n",
+      "Log-Likelihood= -3222.286\n",
+      "AIC= 6468.571\n",
+      "BIC= 6542.311\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_x.fit(\n",
     "    X=X_train,\n",
@@ -208,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "40aadb5f",
    "metadata": {},
    "outputs": [],
@@ -226,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "33951641",
    "metadata": {},
    "outputs": [],
@@ -244,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "32e13c4d",
    "metadata": {},
    "outputs": [],
@@ -266,7 +366,16 @@
    "execution_count": null,
    "id": "13b94508",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/evelyn/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/tqdm_joblib/__init__.py:4: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import biogeme.biogeme_logging as blog\n",
     "import biogeme.biogeme as bio\n",
@@ -274,9 +383,7 @@
     "from biogeme.expressions import Beta, Draws, log, MonteCarlo, PanelLikelihoodTrajectory\n",
     "import biogeme.database as db\n",
     "from biogeme.expressions import Variable\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
-    "import pathlib\n",
     "import sklearn\n",
     "\n",
     "logger = blog.get_screen_logger()\n",
@@ -290,20 +397,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
-    "# df_long = pd.read_csv(pathlib.Path.cwd() / \"electricity_long.csv\")\n",
-    "# choice_df = df_long.loc[df_long['choice'] == 1, ['id', 'chid', 'alt']]\n",
-    "# choice_df = choice_df.rename(columns={'alt': 'choice'})\n",
-    "# df_wide = df_long.pivot(index=['id', 'chid'], columns='alt', values=varnames)\n",
-    "# df_wide.columns = [f'{var}_{alt}' for var, alt in df_wide.columns]\n",
-    "# df_wide = df_wide.reset_index()\n",
-    "# df = df_wide.merge(\n",
-    "#     choice_df,\n",
-    "#     on=['id', 'chid'],\n",
-    "#     how='inner',\n",
-    "#     validate='one_to_one'\n",
-    "# )\n",
-    "\n",
     "database_train = db.Database('electricity', df_wide_train)\n",
     "database_train.panel('id')\n",
     "database_test = db.Database('electricity', df_wide_test)"
@@ -311,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e6d45e23",
    "metadata": {},
    "outputs": [],
@@ -359,10 +452,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5155f664",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The number of draws (600) is low. The results may not be meaningful. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results for model model_b\n",
+      "Nbr of parameters:\t\t12\n",
+      "Sample size:\t\t\t361\n",
+      "Observations:\t\t\t3446\n",
+      "Excluded data:\t\t\t0\n",
+      "Final log likelihood:\t\t-3224.635\n",
+      "Akaike Information Criterion:\t6473.271\n",
+      "Bayesian Information Criterion:\t6519.937\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "prob = models.logit(V, None, choice)\n",
     "logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
@@ -377,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "eecf3cbd",
    "metadata": {},
    "outputs": [],
@@ -408,29 +524,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f04012e3",
-   "metadata": {},
-   "source": [
-    "Compare the probabilities and results\n",
-    "\n",
-    "Format:\n",
-    "[prob prob ... prob] : [which chosen]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8683480",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prob = prob_jj\n",
-    "for i in range(prob.shape[0]):\n",
-    "    print(f\"{prob[i]} : {y[i]}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "fd8ed0ef",
    "metadata": {},
    "source": [
@@ -439,10 +532,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "82021295",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6346932614114899\n"
+     ]
+    }
+   ],
    "source": [
     "# Jaxlogit\n",
     "y = np.reshape(y_test, (prob_jj.shape[0], -1))\n",
@@ -451,10 +552,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a8c30e08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6345286259725497\n"
+     ]
+    }
+   ],
    "source": [
     "# xlogit\n",
     "y = np.reshape(y_test, (prob_xx.shape[0], -1))\n",
@@ -463,10 +572,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "4f1b12c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6340691747340025\n"
+     ]
+    }
+   ],
    "source": [
     "# Biogeme\n",
     "y = df_wide_test['choice']\n",
