fix bug in wide_to_long

--- a/examples/mixed_logit_predict_example_clean.ipynb
+++ b/examples/mixed_logit_predict_example_clean.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "39a05d62",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "47fa6cc1",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f6b4f249",
    "metadata": {},
    "outputs": [],
@@ -88,15 +88,15 @@
     ")\n",
     "\n",
     "df_wide_train, df_wide_test = sklearn.model_selection.train_test_split(df, train_size=0.8)\n",
-    "df_train = wide_to_long(df_wide_train, \"chid\", [1,2,3,4], \"alt\", varying=varnames)\n",
+    "df_train = wide_to_long(df_wide_train, \"chid\", [1,2,3,4], \"alt\", varying=varnames, panels=True)\n",
     "df_train = df_train.sort_values(['chid', 'alt'])\n",
-    "df_test = wide_to_long(df_wide_test, \"chid\", [1,2,3,4], \"alt\", varying=varnames)\n",
+    "df_test = wide_to_long(df_wide_test, \"chid\", [1,2,3,4], \"alt\", varying=varnames, panels=True)\n",
     "df_test = df_test.sort_values(['chid', 'alt'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "46257705",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "535c39c8",
    "metadata": {},
    "outputs": [],
@@ -148,68 +148,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "52742f8e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:2025-12-18 17:54:05,896:jax._src.xla_bridge:477: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda13.initialize()\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/evelyn/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/jax/_src/xla_bridge.py\", line 475, in discover_pjrt_plugins\n",
-      "    plugin_module.initialize()\n",
-      "  File \"/home/evelyn/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/jax_plugins/xla_cuda13/__init__.py\", line 328, in initialize\n",
-      "    _check_cuda_versions(raise_on_first_error=True)\n",
-      "  File \"/home/evelyn/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/jax_plugins/xla_cuda13/__init__.py\", line 285, in _check_cuda_versions\n",
-      "    local_device_count = cuda_versions.cuda_device_count()\n",
-      "                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.\n",
-      "WARNING:2025-12-18 17:54:05,907:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
-      "    Iterations: 95\n",
-      "    Function evaluations: 121\n",
-      "Estimation time= 41.7 seconds\n",
-      "---------------------------------------------------------------------------\n",
-      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-      "---------------------------------------------------------------------------\n",
-      "pf                     -0.9775081     1.0000000    -0.9775081         0.328    \n",
-      "cl                     -0.2255002     1.0000000    -0.2255002         0.822    \n",
-      "loc                     2.2574238     1.0000000     2.2574238         0.024 *  \n",
-      "wk                      1.6596652     1.0000000     1.6596652        0.0971 .  \n",
-      "tod                    -9.4002812     1.0000000    -9.4002812      9.62e-21 ***\n",
-      "seas                   -9.5554154     1.0000000    -9.5554154      2.26e-21 ***\n",
-      "sd.pf                  -1.5334759     1.0000000    -1.5334759         0.125    \n",
-      "sd.cl                  -0.7273021     1.0000000    -0.7273021         0.467    \n",
-      "sd.loc                  1.5420804     1.0000000     1.5420804         0.123    \n",
-      "sd.wk                   0.6986658     1.0000000     0.6986658         0.485    \n",
-      "sd.tod                  2.1445312     1.0000000     2.1445312        0.0321 *  \n",
-      "sd.seas                 1.3206561     1.0000000     1.3206561         0.187    \n",
-      "---------------------------------------------------------------------------\n",
-      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-      "\n",
-      "Log-Likelihood= -3221.664\n",
-      "AIC= 6467.328\n",
-      "BIC= 6541.067\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_jax.fit(\n",
     "    X=X_train,\n",
@@ -234,52 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e89a636c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimization terminated successfully.\n",
-      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
-      "    Iterations: 57\n",
-      "    Function evaluations: 65\n",
-      "Estimation time= 17.7 seconds\n",
-      "---------------------------------------------------------------------------\n",
-      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-      "---------------------------------------------------------------------------\n",
-      "pf                     -0.9708111     1.0000000    -0.9708111         0.332    \n",
-      "cl                     -0.2121449     1.0000000    -0.2121449         0.832    \n",
-      "loc                     2.2137503     1.0000000     2.2137503        0.0269 *  \n",
-      "wk                      1.6392889     1.0000000     1.6392889         0.101    \n",
-      "tod                    -9.3057905     1.0000000    -9.3057905       2.3e-20 ***\n",
-      "seas                   -9.5665445     1.0000000    -9.5665445      2.03e-21 ***\n",
-      "sd.pf                  -0.2045959     1.0000000    -0.2045959         0.838    \n",
-      "sd.cl                   0.3794051     1.0000000     0.3794051         0.704    \n",
-      "sd.loc                  1.7149407     1.0000000     1.7149407        0.0864 .  \n",
-      "sd.wk                   1.1094828     1.0000000     1.1094828         0.267    \n",
-      "sd.tod                  2.3701470     1.0000000     2.3701470        0.0178 *  \n",
-      "sd.seas                 1.4960256     1.0000000     1.4960256         0.135    \n",
-      "---------------------------------------------------------------------------\n",
-      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-      "\n",
-      "Log-Likelihood= -3222.286\n",
-      "AIC= 6468.571\n",
-      "BIC= 6542.311\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_x.fit(\n",
     "    X=X_train,\n",
@@ -308,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "40aadb5f",
    "metadata": {},
    "outputs": [],
@@ -326,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "33951641",
    "metadata": {},
    "outputs": [],
@@ -344,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "32e13c4d",
    "metadata": {},
    "outputs": [],
@@ -366,16 +266,7 @@
    "execution_count": null,
    "id": "13b94508",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/evelyn/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/tqdm_joblib/__init__.py:4: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import biogeme.biogeme_logging as blog\n",
     "import biogeme.biogeme as bio\n",
@@ -404,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e6d45e23",
    "metadata": {},
    "outputs": [],
@@ -452,33 +343,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "5155f664",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The number of draws (600) is low. The results may not be meaningful. \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results for model model_b\n",
-      "Nbr of parameters:\t\t12\n",
-      "Sample size:\t\t\t361\n",
-      "Observations:\t\t\t3446\n",
-      "Excluded data:\t\t\t0\n",
-      "Final log likelihood:\t\t-3224.635\n",
-      "Akaike Information Criterion:\t6473.271\n",
-      "Bayesian Information Criterion:\t6519.937\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prob = models.logit(V, None, choice)\n",
     "logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
@@ -493,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "eecf3cbd",
    "metadata": {},
    "outputs": [],
@@ -532,18 +400,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "82021295",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6346932614114899\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Jaxlogit\n",
     "y = np.reshape(y_test, (prob_jj.shape[0], -1))\n",
@@ -552,18 +412,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a8c30e08",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6345286259725497\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# xlogit\n",
     "y = np.reshape(y_test, (prob_xx.shape[0], -1))\n",
@@ -572,18 +424,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "4f1b12c4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6340691747340025\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Biogeme\n",
     "y = df_wide_test['choice']\n",
