Add comments to predict example

--- a/examples/mixed_logit_predict_example.ipynb
+++ b/examples/mixed_logit_predict_example.ipynb
@@ -67,13 +67,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e3776c3",
+   "metadata": {},
+   "source": [
+    "Reshape the data so it can be passed to test_train_split in a wide format. Additionally, xlogit and jaxlogit require long format while biogeme requires a wide format."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f6b4f249",
    "metadata": {},
    "outputs": [],
    "source": [
-    "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
     "df_long = pd.read_csv(pathlib.Path.cwd() / \"electricity_long.csv\")\n",
     "choice_df = df_long.loc[df_long['choice'] == 1, ['id', 'chid', 'alt']]\n",
     "choice_df = choice_df.rename(columns={'alt': 'choice'})\n",
@@ -291,6 +298,14 @@
     "database_train = db.Database('electricity', df_wide_train)\n",
     "database_train.panel('id')\n",
     "database_test = db.Database('electricity', df_wide_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9e2aa7f",
+   "metadata": {},
+   "source": [
+    "Create variables and expression for utility of each alternative (V)."
    ]
   },
   {
